--- a/src/_includes/blank.njk
+++ b/src/_includes/blank.njk
@@ -26,6 +26,7 @@
     x-data="{
       indexOpen: false,
       audienceDropdownOpen: false,
+      languageDropdownOpen: false,
       loggedIn: true,
       loginOpen: false,
       menuOpen: false,
