--- a/src/pages/forsiden/forsiden.njk
+++ b/src/pages/forsiden/forsiden.njk
@@ -5,6 +5,7 @@ description: 'Lenker til de viktigste områdene + utvalgte snarveier.'
 tags: ['template']
 order: 1
 permalink: '/index.html'
+noJS: true
 ---
 {%- extends 'base.njk' -%}
 
