--- a/src/_includes/base-new.njk
+++ b/src/_includes/base-new.njk
@@ -27,6 +27,7 @@
     x-data="{
       indexOpen: false,
       audienceDropdownOpen: false,
+      languageDropdownOpen: false,
       loggedIn: true,
       loginOpen: false,
       menuOpen: false,
