--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -31,6 +31,7 @@
     x-data="{
       indexOpen: false,
       audienceDropdownOpen: false,
+      languageDropdownOpen: false,
       menuOpen: false,
       notifyOpen: false
     }">
