Eksperimentering med navigasjon i produktside

--- a/src/_includes/blank.njk
+++ b/src/_includes/blank.njk
@@ -22,7 +22,7 @@
     {%- block script -%}{%- endblock -%}
   </head>
   <body
-    class="{{ bodyClass }}"
+    class="text-base {{ bodyClass }}"
     x-data="{
       indexOpen: false,
       audienceDropdownOpen: false,
