--- a/src/_includes/partials/login.njk
+++ b/src/_includes/partials/login.njk
@@ -1,5 +1,5 @@
 {# Notifications #}
-<aside class="absolute w-full top-full sm:right-clamp-gap z-40 mb-10 bg-white rounded-b-lg shadow-xl sm:ml-auto sm:max-w-xl top-full inset-x-0 md:max-h-[92vh]" x-bind:class="loginOpen ? 'opacity-0 animate-dropdown' : 'hidden'">
+<aside class="absolute w-full top-full sm:right-clamp-gap z-40 mb-10 bg-white rounded-b-lg shadow-xl sm:ml-auto sm:max-w-xl inset-x-0 md:max-h-[92vh]" x-bind:class="loginOpen ? 'opacity-0 animate-dropdown' : 'hidden'">
   <div class="p-8 text-lg min-h-64">
     <p>Noe her</p>
 
