--- a/src/pages/ettersende-dokumentasjon/ettersende-dokumentasjon.njk
+++ b/src/pages/ettersende-dokumentasjon/ettersende-dokumentasjon.njk
@@ -5,7 +5,7 @@ kicker: 'Fra A til Å'
 description: 'Finn søknad eller skjema du skal ettersende dokumentasjon til.'
 tags: ['template']
 order: 3
-permalink: '/ettersende-dokumentasjon/'
+permalink: false
 ---
 {%- extends 'base.njk' -%}
 
