--- a/src/pages/sok/sok.njk
+++ b/src/pages/sok/sok.njk
@@ -2,8 +2,9 @@
 title: 'Søk på nav.no'
 description: 'Resultatside'
 order: 12
+permalink: false
 ---
-{%- extends 'base-new.njk' -%}
+{%- extends 'base.njk' -%}
 
 {%- block content -%}
   <main class="min-h-[61vh] py-8 text-lg md:pt-12 md:pb-20 text-gray-900 grid grid-cols-layout relative">
