--- a/src/pages/soknad-og-skjema/privat/privat.njk
+++ b/src/pages/soknad-og-skjema/privat/privat.njk
@@ -6,7 +6,7 @@ description: 'Finn søknad og skjema til pengestøtter og tjenester fra NAV.'
 tags: ['template']
 activeRole: "Privat"
 order: 2
-permalink: "/soknad-og-skjema/"
+permalink: false
 ---
 {%- extends 'base.njk' -%}
 
