--- a/src/pages/soknad-og-skjema/samarbeidspartner/samarbeidspartner.njk
+++ b/src/pages/soknad-og-skjema/samarbeidspartner/samarbeidspartner.njk
@@ -2,7 +2,7 @@
 title: 'Søknad og skjema'
 kicker: 'fra A til Å'
 description: 'Finn søknad og skjema til pengestøtter og tjenester for samarbeidspartnere fra NAV'
-permalink: '/soknad-og-skjema-samarbeidspartner/'
+permalink: false
 ---
 {%- extends 'base.njk' -%}
 
