--- a/src/pages/soknad/aap/aap-soknad.njk
+++ b/src/pages/soknad/aap/aap-soknad.njk
@@ -10,7 +10,8 @@
   eleventyComputed: {
     title: 'Søknad om arbeids&shy;avklarings&shy;penger (AAP)',
     stepTitle: "{{ step.title }}",
-    permalink: "/soknad/aap/{{ step.title | slugify }}/",
+    // permalink: "/soknad/aap/{{ step.title | slugify }}/",
+    permalink: false,
     blocks: "{{ step.formBlocks }}"
   }
 }
