--- a/src/pages/soknad/aap/aap.njk
+++ b/src/pages/soknad/aap/aap.njk
@@ -11,7 +11,8 @@
     title: 'Søk om arbeids&shy;avklarings&shy;penger (AAP)',
     kicker: "Søknad",
     stepTitle: "{{ step.title }}",
-    permalink: "/soknad/aap/",
+    // permalink: "/soknad/aap/",
+    permalink: false,
     order: "4"
   }
 }
