--- a/src/pages/soknad/dagpenger/dagpenger.njk
+++ b/src/pages/soknad/dagpenger/dagpenger.njk
@@ -11,7 +11,8 @@
     title: "Søk om dagpenger",
     kicker: "Søknad",
     stepTitle: "{{ step.title }}",
-    permalink: "/soknad/dagpenger{{ '-' + pagination.pageNumber if pagination.pageNumber >= 1 }}/",
+    // permalink: "/soknad/dagpenger{{ '-' + pagination.pageNumber if pagination.pageNumber >= 1 }}/",
+    permalink: false,
     order: "5"
   }
 }
