--- a/src/pages/tom/tom-side.njk
+++ b/src/pages/tom/tom-side.njk
@@ -3,7 +3,7 @@ title: 'Tom side'
 description: ''
 order: 99
 ---
-{%- extends 'base-new.njk' -%}
+{%- extends 'base.njk' -%}
 
 {%- block content -%}
   <main class="items-center py-12 grid grid-cols-layout min-h-[72vh]">
