--- a/src/_includes/partials/footer.njk
+++ b/src/_includes/partials/footer.njk
@@ -1,5 +1,5 @@
-<footer class="grid pb-12 text-lg text-white bg-deepblue-800 grid-cols-layout" x-bind:inert="menuOpen || notifyOpen">
-  <div class="col-wide">
+<footer class="pb-12 text-white px-xs-2xl bg-deepblue-800" x-bind:inert="menuOpen || notifyOpen">
+  <div class="mx-auto max-w-wide">
     <div class="flex flex-col items-center py-3">
       <a class="flex items-center gap-2 text-base text-center fine:hover:underline fine:hover:text-orange-200" href="#">
         <svg class="w-5 h-5" width="24" height="24" viewBox="0 0 24 24" fill="none" aria-hidden="true" focusable="false">
@@ -35,7 +35,7 @@
 
     </div>
 
-    <div class="flex flex-col justify-between mt-6 sm:flex-row-reverse">
+    <div class="flex flex-col justify-between mt-6 text-sm sm:flex-row-reverse">
       <div class="flex flex-col justify-between gap-3 mt-6 sm:gap-6 sm:flex-row sm:self-end">
         {%- for link in footer.legal -%}
           <a class="fine:hover:underline fine:hover:text-orange-200" href="#">{{ link.text }}</a>
