--- a/src/_includes/partials/prototypeNav.njk
+++ b/src/_includes/partials/prototypeNav.njk
@@ -1,7 +1,7 @@
-<aside x-ref="prototypeMenu" aria-label="Sider i prototypen" class="grid items-center min-h-screen font-mono text-xl text-white bg-gradient-to-b from-deepblue-800 via-deepblue-900 to-deepblue-900 md:text-2xl">
-  <div class="grid grid-cols-layout py-clamp-gap">
-    <h2 class="text-lg font-semibold tracking-widest uppercase col-wide text-deepblue-300">Sider i prototypen</h2>
-    <ul class="mt-4 col-wide">
+<aside x-ref="prototypeMenu" aria-label="Sider i prototypen" class="flex flex-row min-h-screen font-mono text-white bg-deepblue-900 px-xs-2xl">
+  <div class="w-full mx-auto mt-auto max-w-wide pb-sm-md">
+    <h2 class="text-sm font-semibold tracking-widest uppercase col-wide text-deepblue-300">Sider i prototypen</h2>
+    <ul class="mt-4 col-wide md:text-lg">
     {% set pages = collections.template | sort(false, false, 'data.order') %}
     {%- for page in pages -%}
       <li class="grid items-center justify-start py-4 border-t border-deepblue-700 min-h-24">
