--- a/src/pages/soknad-og-skjema/arbeidsgiver/arbeidsgiver.njk
+++ b/src/pages/soknad-og-skjema/arbeidsgiver/arbeidsgiver.njk
@@ -2,7 +2,7 @@
 title: 'Søknad og skjema'
 kicker: 'Fra A til Å'
 description: 'Finn søknad og skjema til pengestøtter og tjenester for arbeidsgivere fra NAV'
-permalink: '/soknad-og-skjema-arbeidsgiver/'
+permalink: false
 ---
 {%- extends 'base.njk' -%}
 
