--- a/src/pages/soknad-og-skjema/privat/generisk-mellomsteg.njk
+++ b/src/pages/soknad-og-skjema/privat/generisk-mellomsteg.njk
@@ -8,7 +8,8 @@
   eleventyComputed: {
     title: "{{ product.title }}",
     kicker: "Søknad",
-    permalink: "/soknad/temp-{{ product.title | slugify }}.html"
+    // permalink: "/soknad/temp-{{ product.title | slugify }}.html"
+    permalink: false
   }
 }
 ---
