--- a/src/pages/soknad-og-skjema/samarbeidspartner/generisk-mellomsteg.njk
+++ b/src/pages/soknad-og-skjema/samarbeidspartner/generisk-mellomsteg.njk
@@ -12,8 +12,8 @@
   eleventyComputed: {
     title: "{{ product.title }}",
     kicker: "Søknad",
-    permalink: "/soknad/temp-{{ product.title | slugify }}-sam.html"
-    // permalink: false
+    // permalink: "/soknad/temp-{{ product.title | slugify }}-sam.html"
+    permalink: false
   }
 }
 ---
